--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admine",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/graaphi/admine.git"
