--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "export": "next export",
+    "deploy": "yarn build && yarn export",
     "start": "next start"
   },
   "dependencies": {
